# pyplate

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config_example.yaml  docker-compose.yml  justfile  mypy.ini  pyproject.toml  pytest.ini  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.build.yml
.devcontainer/scripts/: custom_cli.sh
.github/: CONTRIBUTING.md  action.yml  docker-compose.testing.yml  pull_request_template.md
.github/workflows/: Dockerfile  basic.yml  checks.yml  packages_update.yml  renovate-config.json  renovate.yml
pyplate/settings/: README.md  __init__.py  logging_config.py  settings.py
pyplate/shared/: __init__.py  env_type.py
requirements/: README.md  base.txt  dev.txt  prod.txt
scripts/: fix_checks.sh  run_checks.sh  run_dev.sh  run_tests.sh  setup_project.sh  update_packages.sh
src/: config.py  main.py  notebook.ipynb
src/loaders/: __init__.py  config_loader.py
src/settings/: __init__.py  base.py
src/settings/components/: logging.py
src/tests/: .env.test  conftest.py  test_main.py
src/tests/test_loaders/: test_config_loader.py
src/tests/test_settings/: test_base.py
src/tests/test_utils/: test_yaml_reader.py
src/utils/: __init__.py  logger.py  yaml_reader.py
tests/: .env.test  conftest.py  test_main.py
tests/test_settings/: test_settings.py
